force-app/main/default/objects/Lead/fields/Current_Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Expiration_Date__c</fullName>
    <label>Current Contract Expiration Date</label>
    <type>Date</type>
</CustomField>