force-app/main/default/objects/Lead/fields/Expected_Volume_in_Capsules__c.field-meta.xml
<CustomField>
    <fullName>Expected_Volume_in_Capsules__c</fullName>
    <label>Expected Volume in Capsules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>