force-app/main/default/objects/Lead/fields/Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age__c</fullName>
    <formula>(5 * ( FLOOR( (  TODAY()  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
 TODAY()  - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE (CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
 DATEVALUE(CreatedDate)  - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>