force-app/main/default/objects/Lead/fields/Lead_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>