force-app/main/default/objects/Lead/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <inlineHelpText>Out of Home refers to on-premise consumption (bars, restaurants, hotels), while Home refers to places that retail for off-premise consumption (supermarkets, shops, online-stores)</inlineHelpText>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel</valueSetName>
    </valueSet>
</CustomField>