force-app/main/default/objects/Lead/fields/Reason_Closed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Closed__c</fullName>
    <label>Reason Closed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad contact data</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>