force-app/main/default/objects/Lead/fields/Referring_Agent__c.field-meta.xml
<CustomField>
    <fullName>Referring_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>