force-app/main/default/objects/Lead/fields/Route_to_Market__c.field-meta.xml
<CustomField>
    <fullName>Route_to_Market__c</fullName>
    <label>Route to Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Route_to_Market</valueSetName>
    </valueSet>
</CustomField>