force-app/main/default/objects/Lead/fields/Samples_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Samples_Sent_Date__c</fullName>
    <label>Samples Sent Date</label>
    <type>Date</type>
</CustomField>