force-app/main/default/objects/Lead/fields/Scanned_from_Business_Card__c.field-meta.xml
<CustomField>
    <fullName>Scanned_from_Business_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scanned from Business Card</label>
    <type>Checkbox</type>
</CustomField>