force-app/main/default/objects/Lead/fields/Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Social_Media__c</fullName>
    <label>Social Media</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google AdWords</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>