force-app/main/default/objects/Lead/fields/Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sub_Channel__c</fullName>
    <label>Sub Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Segment</valueSetName>
    </valueSet>
</CustomField>