force-app/main/default/objects/Lead/fields/Trade_Show__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Show</label>
    <referenceTo>Trade_Show__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>