force-app/main/default/objects/Lead/validationRules/filled_out_agent_referral.validationRule-meta.xml
<ValidationRule>
    <fullName>filled_out_agent_referral</fullName>
    <active>true</active>
    <description>If lead source is equal to agent, agent referral field should fill out</description>
    <errorConditionFormula>AND (    ISPICKVAL( LeadSource, &apos;Agent&apos; ),    ISBLANK( Referring_Agent__c ) )</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>fill out referring agent</errorMessage>
</ValidationRule>